applications/openeuler-mos-repo-mirror/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: repo-mirror
  name: repo-mirror
