applications/openeuler-mos-repo-mirror/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: repo-server
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: repo-nginx-pod
    spec:
      containers:
        - name: repo-nginx
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx-extras:1.21.0-with-fancy-templates-repo
          volumeMounts:
            - mountPath: /repo/openeuler
              name: data-volume
            - mountPath: /repo/archives
              name: archives-volume
          resources:
            requests:
              cpu: 4000m
              memory: 6000Mi
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /repo/openeuler
              exec nginx -g "daemon off;"
        - name: rsync-server
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/repo-client:122abc521614802693d71f85303360a21972cefb
          volumeMounts:
            - mountPath: /repo/openeuler
              name: data-volume
            - mountPath: /root/.ssh/authorized_keys.ro
              name: repo-nginx-configmap-volume
              subPath: ssh.pub
          command:
            - /bin/sh
            - -c
            - |
              /usr/bin/rsync --daemon --config /etc/rsyncd.conf
              exec tini -- entrypoint.sh
          resources:
            requests:
              cpu: 4000m
              memory: 8000Mi
      volumes:
        - name: rsync-secrets-volume
          secret:
            secretName: rsync-secrets
        - name: data-volume
          persistentVolumeClaim:
            claimName: cce-evs-openeuler-data-volume
        - name: archives-volume
          persistentVolumeClaim:
            claimName: archives-repo-volume
